--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1797,107 +1797,107 @@ stories:
   domain: http://www.statesmanexaminer.com/
   link: https://www.statesmanexaminer.com/content/colville-chamber-commerce-hold-home-holidays-event
 images:
-- name: berlinwall-DSC-0084-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-ww2-dresden.jpg
-- name: school-clouds-church-clouds-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-ww2-dresden.jpg
-- name: old-school-house-old-schoolhouse-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colored-circuits.jpg
-- name: bf-skinner-seattle-waterfront-ferris-wheel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-waterfront-ferris-wheel.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-constitution.jpg
-- name: windowmountain-window-mountain-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-hot-spicy.jpg
-- name: oldroad-old-road-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-deep-connections.jpg
-- name: supreme-court-supremecourt-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-crafty-painting.jpg
-- name: mediterranean-mediterranean-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-blue-electricity.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
-- name: carry-load-carryload-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-neo-instinct.jpg
-- name: trucksilo-trucksilo-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-yellow-paper.jpg
-- name: legal-statue-legalstatue-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-paper.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-wols.jpg
-- name: containership-containership-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-wols.jpg
-- name: copper-circuit-underground-subway_35929749683_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-underground-subway_35929749683_o.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dry-skin.jpg
-- name: carry-load-carryload-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-pablo-blue.jpg
-- name: lincoln-memorial-lincolnmemorial-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-circuit.jpg
-- name: aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
-- name: bf-skinner-train-car_35892468014_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-car_35892468014_o.jpg
-- name: rain-princess-cemetery_35902984304_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-cemetery_35902984304_o.jpg
-- name: power-lines-power-lines-empty-space-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-sunday.jpg
-- name: oldcabin-oldcabin-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-hot-spicy.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-aqua.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-aqua.JPG
-- name: wind-mills-windmills-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-internet-numbers.jpg
-- name: old-church-oldchurch-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-blue-granite.jpg
-- name: abandonedbuildings_constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_constitution.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-rain.JPG
-- name: berlinwall-DSC-0084-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purp-paper.jpg
-- name: miamibeach-miamibeach-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-ww2-dresden.jpg
-- name: aws-s3-stories-green-gears-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-green-gears-matrix.jpg
-- name: old-gas-pumps-oldgaspumps-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crunch-paper.jpg
-- name: statue-of-liberty-front-view-statueofliberty-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-colored-circuits.jpg
-- name: castle-wall-DSC-0067-matrix.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-matrix.JPG
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-graham-sutherland.jpg
-- name: old-granary-field-granaryfield-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-collage.jpg
-- name: oldhouse-granaryfield-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-green-zuma.jpg
-- name: crow-crow-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-marcel-duchamp.jpg
-- name: bf-skinner-lincoln-sitting-front.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-lincoln-sitting-front.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
-- name: server-racks-door-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-marcel-duchamp.jpg
-- name: san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
-- name: dc-statue-dcstatue-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-hot-spicy.jpg
-- name: oldhousecars-house-old-cars-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crunch-paper.jpg
-- name: subway-subway-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-kand-two.jpg
-- name: sand-hand-sand-hand-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-hot-spicy.jpg
-- name: subway-subway-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-electricity.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-- name: beach-clouds-lifeguard-beachclouds-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-gred-mash.jpg
+- name: windowmountain-window-mountain-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colorful-blocks.jpg
+- name: paris-paris.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris.jpg
+- name: ellis-island-ellisisland-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-emily-carr.jpg
+- name: castle-wall-DSC-0067-kand-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-kand-two.JPG
+- name: aws-s3-bluelake-bluelake-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-bluelake-bluelake-still-1200.jpg
+- name: mediterranean-mediterranean-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-spagetti-accident.jpg
+- name: window-window-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-spagetti-accident.jpg
+- name: downtheline-downtheline-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-alien-goggles.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-graham-sutherland.jpg
+- name: stalin-time-hallway-mirrors-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-hallway-mirrors-hotel.jpg
+- name: ellis-island-ellis-island-room-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-sand-paper.jpg
+- name: copper-circuit-city-waterfront-path.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-waterfront-path.jpg
+- name: berlinwall2-berlinwall-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-internet-numbers.jpg
+- name: mediterranean-mediterranean-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-smooth-ride.jpg
+- name: braceros-domingo-ulloa-screaming-face-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-screaming-face-statue.jpg
+- name: liberty-back-statue-liberty-back-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dry-skin.jpg
+- name: oldhouse-granaryfield-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-creativity.jpg
+- name: old-barn-old-barn-1500-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-cinnamon-rolls.jpg
+- name: beach-clouds-lifeguard-beachclouds-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kand-two.jpg
+- name: window-window-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-satan-red.jpg
+- name: flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-ww2-color.jpg
+- name: old-house-oldhouse-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-gred-mash.jpg
+- name: berlinwall-DSC-0084-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-ww2-color.jpg
+- name: power-lines-power-lines-empty-space-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purp-paper.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-ww2-dresden.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-ww2-dresden.JPG
+- name: redondo-beach-harbor-redondo-beach-harbor-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-brush.jpg
+- name: mosaic-face-mosaic-face-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-wols.jpg
+- name: oldbarn-oldbarn-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-rainbow-festival.jpg
+- name: razorcliff-razorcliff-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colorful-blocks.jpg
+- name: beach-clouds-lifeguard-beachclouds-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-granite.jpg
+- name: mosaic-face-mosaic-face-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-colorful-blocks.jpg
+- name: old-cabin-oldcabin-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-purp-paper.jpg
+- name: curtain-curtain-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crunch-paper.jpg
+- name: nazi-invasion-san-francisco-lights-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-lights-skyline.jpg
+- name: oldhouse-granaryfield-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-sunday.jpg
+- name: dc-statue-dcstatue-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dry-skin.jpg
+- name: abandonedbuildings_blue_electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_blue_electricity.jpg
+- name: fence-mexico-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dark-soul.jpg
+- name: abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
+- name: mediterranean-mediterranean-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-storm.jpg
+- name: scream-IMG_8352.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8352.jpg
+- name: oldbarn-oldbarn-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-marcel-duchamp.jpg
+- name: aws-s3-stories-mosaic-face-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-mosaic-face-blue-circuit-3.jpg
+- name: old-granary-field-oldhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-really-hot.jpg
+- name: oldroad-old-road-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-paper.jpg
+- name: old-door-lock-old-door-lock-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-emily-carr.jpg
+- name: supreme-court-supremecourt-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-clean-view.jpg
+- name: blossombar-hot-spicy-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-hot-spicy-file-00-00-00-00.jpg
+- name: oldroad-old-road-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crabapple.jpg
+- name: walled-garden-walled-garden-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dali-three.jpg
+- name: old-gas-pumps-oldgaspumps-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-colorful-dream.jpg
 ---
 Nebraska Pig Farmers Pay It Forward.&nbsp;Six Arrested In Prostitution Sting.&nbsp;House Explosion Rattles Parts Of Brownfield.&nbsp;As More Women Run For Office, Child Care Remains A Hurdle.&nbsp;Twenty Fitness Specials To Honor Your New Year's Resolution.&nbsp;Renovations To Hazel Ruby McQuain Park Near Completion.&nbsp;Pancakes And Santa Pic.&nbsp;Bomb Squad Called To Findlay Business For Suspicious Activity.&nbsp;
